--- a/config/user-service-dev.yml
+++ b/config/user-service-dev.yml
@@ -7,6 +7,12 @@ sp:
 spring:
   application:
     name: user-service
+  rabbitmq:
+    host: 192.168.149.131
+    port: 5672
+    username: admin
+    password: admin 
+   
     
 server:
   port: 8101
