--- a/config/zuul-dev.yml
+++ b/config/zuul-dev.yml
@@ -6,6 +6,11 @@ spring:
     port: 5672
     username: admin
     password: admin
+management:
+  endpoints:
+    web:
+      exposure:
+        include: refresh
     
 server:
   port: 3001
